complete dynamic GET product index route with corresponding Makers

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,7 +17,7 @@
                 <a class="nav-link" href="/cello">Cellos</a>
             </li>
             <li class="nav-item">
-                 <a class="nav-link" href="/violins">Violins</a>
+                 <a class="nav-link" href="/violin">Violins</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/accessories">Accesories</a>
