--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,13 +14,12 @@
     </header>
     <main>
         <div class="card" style="width: 25%;">
-            <h3 class="card-body" style="display: flex; flex-wrap: wrap;"><%= Product.maker %></h3>
+            <h3 class="card-body" style="display: flex; flex-wrap: wrap;"><%= prodMaker.name %></h3>
             <% for (let [key, value] of Object.entries(Product)) { %>
                 <% if (key !== 'description' && key !== 'photo' && key !== '_id' && key !== '__v' && key !== 'createdAt' && key !== 'updatedAt') { %>
                     <p  class="card-body" style="height: 20px; padding: 0%; margin: 3px;"><%= `${key}: ${value}` %> </p>
             <% }} %>   
 
-            <!-- NEED TO UPDATE /PRODUCT BELOW -->
             <div class="btn-group" role="group" style="display: flex; justify-content: flex-end;">
                 <a href="/<%= prodType %>/<%= Product._id %>/edit">
                     <button type="button" class="btn btn-secondary">Edit</button>
