--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,16 +8,19 @@
     justify-content: center;
     width: 100vw;
 }
-nav {
+.navbar {
     display: flex;
     justify-content: center;
     width: 100vw;
+    margin: 0;
 }
 .navbutt {
     border: 1px solid black;
 }
 
-
+div .container {
+    margin: 0 0 0 0;
+}
 body {
     display: flex;
     flex-wrap: wrap;
