--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
     <title>Show Page</title>
 </head>
 <body>
@@ -19,6 +20,7 @@
                 <br>
             <% } %>
             <form action="/<%= prodType %>/<%= Product._id %>?_priorProdType=<%= priorProdType %>&_method=PUT" method="POST">
+                <div class="form-group">
                 <% if (prodType !== 'accessories' && prodType !== 'maker' && prodType !== 'bow') { %>    
                     <label for="Maker">Maker</label>
                     <select type="text" id="maker" name="makerId"> 
@@ -32,8 +34,13 @@
                 <% } %>
                 <% for (let [key] of Object.entries(schema)) { %>
                     <% if (key !== 'products' && key !== 'bio') { %>
-                        <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
-                        <input type="text" name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>">
+                        <div class="input-group mb-2">
+                            <label class="sr-only" for="<%= `${key}` %>"><%= `${key}: ` %></label>
+                            <div class="input-group-prepend">
+                                <div class="input-group-text"><%= `${key}: ` %></div>
+                            </div>
+                            <input type="text" class="form-control" name="<%= `${key}` %>" id="<%= `${key}` %>" value="<%= Product[key] %>">
+                        </div>
                         <br>
                     <% } else if (key === 'bio') { %>
                         <label for="<%= `${key}` %>"><%= `${key}: ` %></label>
@@ -43,6 +50,7 @@
                 <% } %>  
             
                 <button type="submit">Submit</button>
+            </div>
             </form>
         </div>
     </main>
