--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
+    <% const currencyStyle = { style: 'currency', currency: 'USD' } %>
     
     <title><%= prodType %> Index</title>
 </head>
@@ -16,17 +17,16 @@
         <section class="products">
             <img src="" alt="" sizes="width: 100px" srcset=""><div>generic product type image placeholder</div>
             <div><h2><%= prodType %></h2></div>
-            <!-- <table class="product-table">
-                <tr class="table-heading">
-                    <th class="table-column name-column">Name</th>
-                    <th class="table-column status-column">Status</th>
-                    <th class="table-column qty-column">Quantity</th>
-                    <th class="table-column price-column">Price</th>
-                    <th class="table-column cost-column">Cost</th>
-                    <th class="table-column detail-column"></th>
-                    <th class="table-column edit-column"></th>
-                    <th class="table-column delete-column"></th>
-                </tr> -->
+                    <div class="table-row">
+                        <div class="table-cell row-name">Name</div>
+                        <div class="table-cell row-status">Status</div>
+                        <div class="table-cell row-quantity">Quantity</div>
+                        <div class="table-cell row-price">Price</div>
+                        <div class="table-cell row-cost">Cost</div>
+                        <div class="table-cell row-action">Detail</div>
+                        <div class="table-cell row-action">Update</div>
+                        <div class="table-cell row-action">Delete</div>
+                    </div>
                 <% products.forEach(product=> { %>
                     <div class="table-row">
                         <div class="table-cell row-name" data-href="/<%= prodType %>/<%= product._id %>">
@@ -37,10 +37,10 @@
                                 <%= product.name %>
                             <% } %>
                             </div>
-                        <div class="table-cell row-status"><p style="align-self: center;"><%= product.status %></p></div>
-                        <div class="table-cell row-quantity"><%= product.quantity %></div>
-                        <div class="table-cell row-price"><%= product.price %></div>
-                        <div class="table-cell row-cost"><%= product.cost %></div>
+                        <div class="table-cell row-status" style="align-self: center;"><%= product.status %></div>
+                        <div class="table-cell row-quantity"><%= Intl.NumberFormat('en-US').format(product.quantity) %></div>
+                        <div class="table-cell row-price"><%= Intl.NumberFormat('en-US', currencyStyle).format(product.price) %></div>
+                        <div class="table-cell row-cost"><%= Intl.NumberFormat('en-US', currencyStyle).format(product.cost) %></div>
                         <div class="table-cell btn-group row-action" role="group" aria-label="Basic example">
                             <form action="/<%= prodType %>/<%= product._id %>" method="GET">
                                 <button type="submit" type="button" class="btn btn-secondary">Detail</button>
