complete general layout for index page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -78,7 +78,7 @@ footer {
 }
 
 /* index */
-.products {
+/* .products {
     flex-direction: column;
     display: flex;
     justify-content: center;
@@ -94,9 +94,11 @@ footer {
     flex-wrap: wrap;
 }
 .table-row {
-    width: 80vw;
-    height: 50px;
-    display: inline-block;
+    width: 70vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: solid 1px steelblue;
 }
 .table-cell {
     height: 100%;
@@ -106,21 +108,27 @@ footer {
     justify-content: center;
 }
 .row-name {
-    width: 20%;
+    width: 30%;
+    min-width: 200px;
 }
 .row-status {
     margin: 0;
     width: 7%;
+    min-width: 80px;
 }
 .row-quantity {
-    width: 2%;
+    width: 3%;
+    min-width: 50px;
 }
 .row-price {
     width: 10%;
+    min-width: 120px;
 }
 .row-cost {
     width: 10%;
-}
+    min-width: 120px;
+} */
+
 
 /* forms */
 form {
