--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,134 +2,67 @@
     box-sizing: border-box;
 }
 
-/* header */
-.logo {
-    display: flex;
-    justify-content: center;
-    width: 100vw;
-}
-nav {
-    display: flex;
-    justify-content: center;
-    width: 100vw;
-}
-.navbutt {
-    border: 1px solid black;
-}
-
-
-body {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0;
-    background-color: cadetblue;
-}
-
-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80vw;
-}
-.delete-btn {
-    background-color: rgba(117, 5, 5, 0.925);
-}
-/* Dashboard */
-
-#dashboard {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80vw;
-    margin: 20px 0 0 0;
-}
-
-.dashcard {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 2px;
-    position: relative;
-}
-.dash-btn-grp {
-    padding: 0;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    display: flex; 
-    justify-self: flex-end;
-}
-.product-type {
-    display: flex;
-    width: 40%;
-    justify-content: center;
-}
-.finances {
-    display: flex;
-    width: 40%;
-    justify-content: center;
-}
-
-footer {
-    align-self: flex-end;
-}
-
 /* index */
 .products {
     flex-direction: column;
     display: flex;
     justify-content: center;
 }
-.product-table {
-    justify-content: center;
+.title {
     display: flex;
+    justify-content: space-between;
+}
+.title h2{
+    /* display: inline-block; */
 }
 
-.products div {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
 .table-row {
-    width: 80vw;
-    height: 50px;
-    display: inline-block;
+    width: 70vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    border: solid 3px steelblue;
+    border-radius: 20px;
+    box-shadow: 3px 3px rgb(61, 115, 159), 2px 2px  rgb(61, 115, 159), 1px 1px  rgb(61, 115, 159);
+    padding: 5px;
+    margin: 5px;
 }
 .table-cell {
+    display: inline-block;
     height: 100%;
     padding: 3px;
-    display: flex;
     align-content: center;
-    justify-content: center;
+    vertical-align: middle;
 }
 .row-name {
-    width: 20%;
+    width: 30%;
+    min-width: 200px;
 }
 .row-status {
     margin: 0;
     width: 7%;
+    min-width: 80px;
 }
 .row-quantity {
-    width: 2%;
+    width: 3%;
+    min-width: 50px;
 }
 .row-price {
     width: 10%;
+    min-width: 120px;
 }
 .row-cost {
     width: 10%;
+    min-width: 120px;
 }
-
-/* forms */
-form {
+.row-price-cost {
+    width: 20%;
+    min-width: 250px;
+}
+.row-action {
     display: flex;
-    justify-content: center;
 }
-.form-group {
-    width: 80vw;
-    display: block;
-    justify-content: center;
-}
-
-.form-control {
-    width: 100%;
+.btn {
+    margin: 2px;
 }
