added some images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     
     <title><%= prodType %> Index</title>
 </head>
-<body>
+<body style="background-image: url('/images/cello1.jpg');">
     <header>
         <%- include('./header.ejs') %>
     </header>
