--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,22 @@
-<section class="logo">
+<!-- <section class="logo">
     <h1>The Elegant Cellos and Violins</h1>
     <p>add image here</p>
-</section>
+</section> -->
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="/project-asset/33591.jpg" class="d-block w-100 data-interval='2000'" alt="blindfuck">
+        </div>
+        <div class="carousel-item">
+            <img href="https://picsum.photos/200" class="d-block w-100 data-interval='2000'" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://picsum.photos/" class="d-block w-100 data-interval='2000'" alt="...">
+        </div>
+    </div>
+</div>
+
 <nav class="navbar navbar-dark bg-dark">
     <div class="container d-flex justify-content-center">
         <ul class="nav">
