--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/4d0a94b320.js"></script>
 
     <title>Cellos & Violins Dashboard</title>
 </head>
@@ -58,28 +60,9 @@
             </div>
         </section>
     </main>
-    <footer>
-        <section class="about-us">
-            <h4>Tony Yu</h4>
-            <p>Brand Statment</p>
-            <div class="contact-info">
-                <h5>Contact Info</h5>
-                <a href="#">email: xtonyyu@gmail.com</a>
-                <a href="#">LinkedIn link and logo</a>
-                <a href="#">GitHub link and logo</a>
-            </div>
-        </section>
-        <section class="about-us">
-            <h4>Lucian Nicolescu</h4>
-            <p>Brand Statment</p>
-            <div class="contact-info">
-                <h5>Contact Info</h5>
-                <a href="#">email: lucian.nicolescu.cello@gmail.com</a>
-                <a href="#">LinkedIn link and log</a>
-                <a href="#">GitHub link and logo</a>
-            </div>
-        </section>
-    </footer>
+        
+<%- include("./footer.ejs") %> 
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
