--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,13 +6,13 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/project-asset/33591.jpg" class="d-block w-100 data-interval='2000'" alt="blindfuck">
+            <img src="/images/accessories1.jpeg" class="d-block w-100 data-interval='5000'" alt="blindfuck">
         </div>
         <div class="carousel-item">
-            <img href="https://picsum.photos/200" class="d-block w-100 data-interval='2000'" alt="...">
+            <img src="/images/cello3.jpeg" class="d-block w-100 data-interval='5000'" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="https://picsum.photos/" class="d-block w-100 data-interval='2000'" alt="...">
+            <img src="/images/cello3.jpeg" class="d-block w-100 data-interval='5000'" alt="...">
         </div>
     </div>
 </div>
