--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,3 @@
-* {
-    box-sizing: border-box;
-}
 
 /* index */
 .products {
@@ -11,20 +8,26 @@
 .title {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    color: whitesmoke;
+    margin: 10px;
 }
-.title h2{
-    /* display: inline-block; */
+
+.title h2 {
+    font-size: 60px;
+
 }
 
 .table-row {
     width: 70vw;
+    background-color: white;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     border: solid 3px steelblue;
     border-radius: 20px;
-    box-shadow: 3px 3px rgb(61, 115, 159), 2px 2px  rgb(61, 115, 159), 1px 1px  rgb(61, 115, 159);
+    box-shadow: 2px 2px rgb(119, 191, 250), 2px 2px  rgb(119, 191, 250), 1px 1px  rgb(119, 191, 250);
     padding: 5px;
     margin: 5px;
 }
@@ -48,10 +51,8 @@
     width: 3%;
     min-width: 50px;
 }
-.row-price {
-    width: 10%;
-    min-width: 120px;
-}
+
+.row-price,
 .row-cost {
     width: 10%;
     min-width: 120px;
