--- a/public/css/index.css
+++ b/public/css/index.css
@@ -9,10 +9,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: whitesmoke;
     margin: 10px;
+    color: rgb(33, 37, 41);
 }
-
 .title h2 {
     font-size: 60px;
 
@@ -26,10 +25,10 @@
     justify-content: space-between;
     align-items: center;
     border: solid 3px steelblue;
-    border-radius: 20px;
+    border-radius: 5px;
     box-shadow: 4px 4px 3px;
     padding: 5px 15px;
-    margin: 5px;
+    margin: 2px;
 }
 .table-cell {
     display: inline-block;
