--- a/public/css/main.css
+++ b/public/css/main.css
@@ -9,23 +9,33 @@ body {
     margin: 0;
     background-size: cover;
 }
-.gray-bg {
-    background-color: rgb(52, 58, 64);
+
+
+/* header */
+.carousel-item {
+    height: 200px;
 }
-.lk-rm {
-    color: black;
+.logo {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
 }
-.txt-sl {
-    color: lightgray;
+.navbar {
+    box-shadow: 0px 3px 2px;
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    margin: 0 0 15px 0;
+    padding: 5px 0 5px 0;
+}
+.navbutt {
+    border: 1px solid black;
+}
+div .container {
+    margin: 0 0 0 0;
 }
 
-main {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 80vw;
-    height: 100%;
-}
+/* footer */
 footer {
     border-radius: 10px 10px 0 0;
     color: lightgray;
@@ -42,7 +52,6 @@ footer {
     align-items: center;
     height: 100%;
 }
-
 .about-us {
     display: flex;
     height: 50px;
@@ -51,50 +60,36 @@ footer {
     align-items: center;
     margin: 20px 0 60px 0;
 }
-
 .delete-btn {
     background-color: rgba(117, 5, 5, 0.925);
 }
 
-/* header */
-.carousel-item {
-    height: 200px;
-}
-.logo {
+/* main */
+main {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    width: 100vw;
-}
-.navbar {
-    box-shadow: 0px 3px 2px;
-    display: flex;
-    justify-content: center;
-    width: 100vw;
-    margin: 0;
-}
-.navbutt {
-    border: 1px solid black;
+    width: 80vw;
+    height: 100%;
 }
 
-div .container {
-    margin: 0 0 0 0;
-}
 
 /* Dashboard */
 #dashboard {
     width: 80vw;
 }
 .dashcard {
-    background-color: rgb(250, 245, 245);
-    box-shadow: 4px 4px 3px;
+    background-color: rgb(250, 245, 245);   
     display: flex;
     flex-wrap: wrap;
     margin: 4px;
     position: relative;
-    background-color: lightgray;
-    border: solid 3px steelblue;
-    border-radius: 20px;
     margin: 5px;
+}
+.ind-name {
+    padding: 0 10px 0 10px;
+    background-color: rgb(211, 211, 211);   
+    margin: 0
 }
 .card-body {
     padding: 15px 15px 50px 15px;
@@ -111,9 +106,6 @@ div .container {
     display: flex; 
     justify-self: flex-end;
 }
-.btn {
-    margin: 2px;
-}
 
 /* forms */
 form {
@@ -121,17 +113,16 @@ form {
     justify-content: center;
 }
 .form-group {
-    width: 80vw;
+    width: 60vw;
     display: block;
     justify-content: center;
+    
 }
-
 .form-control {
     width: 100%;
 }
 
 /* footer */
-
 footer {
     border-radius: 10px 10px 0 0;
     color: lightgray;
@@ -141,7 +132,6 @@ footer {
     justify-content: center;
     flex-wrap: wrap;
 }
-
 .footer-div {
     margin: 0 5px;
     display: flex;
@@ -150,20 +140,44 @@ footer {
     /* min-width: 50px; */
     height: 100%;
 }
-
 .about-us {
     display: flex;
     height: 50px;
     padding: 3px;
     justify-content: center;
     align-items: center;
+    margin-top: 0;
 }
-.luci,
-.tony {
-    padding: 0px 10px;
-    border-right: 1px solid lightgray;
+.tony h4 {
+    padding: 0 10px 0 5px;
+    border-right: 1px solid rgb(165, 165, 165);
 }
-
 .about-us a { 
     color: inherit; 
 } 
+.luci h4 {
+    padding: 0 5px 0 5px;
+}
+
+/* universal classes */
+.gray-bg {
+    background-color: rgb(52, 58, 64);
+}
+.lk-rm {
+    color: black;
+}
+.txt-sl {
+    color: lightgray;
+}
+.border {
+    box-shadow: 4px 4px 3px rgb(52, 58, 64);
+    border-radius: 10px;
+    border: 0px !important;
+}
+.btn-left {
+    border-radius: 4px 0 0 4px;
+}
+.btn-right {
+    border-radius: 0 4px 4px 0;
+    margin-right: 3px;
+}
