--- a/views/new.ejs
+++ b/views/new.ejs
@@ -31,7 +31,7 @@
                 <% for (let [key] of Object.entries(schema)) { %>
                     <% if (key.required === true) console.log('required') %>
                     <% if (key !== 'products' && key !== 'bio') { %>
-                        <div class="input-group mb-2">
+                        <div class="input-group mb-2 border">
                             <label class="sr-only" for="<%= `${key}` %>"><%= `${key}: ` %></label>
                             <div class="input-group-prepend">
                                 <div class="input-group-text"><%= `${key}: ` %></div>
