--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,6 +1,6 @@
 <footer class="bg-dark">
     <section class="about-us tony">
-        <a href="xtonyyu@gmail/com" class="footer-div"><i class="fa fa-envelope-square fa-2x"></i></a>
+        <a href="mailto:xtonyyu@gmail/com" class="footer-div"><i class="fa fa-envelope-square fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/xtonyyu/" class="footer-div"><i class="fa fa-linkedin fa-2x"></i></a>
         <a href="https://github.com/xTonyYu" class="footer-div"><i class="fa fa-github-square fa-2x"></i></a>
         <h4>Tony Yu</h4>  
