--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -21,19 +21,25 @@
     <div class="container d-flex justify-content-center">
         <ul class="nav">
             <li class="nav-item">
-                 <a class="nav-link txt-sl active" href="/dashboard">Home</a>
+                <a class="nav-link txt-sl active" href="/dashboard">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link txt-sl" href="/cello">Cellos</a>
             </li>
             <li class="nav-item">
-                 <a class="nav-link txt-sl" href="/violin">Violins</a>
+                <a class="nav-link txt-sl" href="/violin">Violins</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link txt-sl" href="/accessories">Accesories</a>
             </li>
-                <li class="nav-item txt-sl">
-            <a class="nav-link txt-sl" href="/sales">Sales</a>
+            <li class="nav-item txt-sl">
+                <a class="nav-link txt-sl" href="/sales">Sales</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link txt-sl" href="/login">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link txt-sl" href="/register">Register</a>
             </li>
         </ul>
     </div>
