--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,6 +69,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 20px 0 60px 0;
     width: 80vw;
     height: 100%;
 }
