--- a/public/css/show.css
+++ b/public/css/show.css
@@ -8,17 +8,18 @@
 }
 
 .card,
-.show-card {
-    width: 30%;
+.show-card,
+.show-photo {
+    width: 100%;
     margin: 5px;
+    background-color: rgb(250, 245, 245);   
 }
 .description {
     margin: 5px 5px 70px 5px;
+    padding: 15px;
+    background-color: rgb(250, 245, 245);   
 }
 .show-photo {
-    width: 100%;
-    background-color: lightgray;
-    border: solid 3px steelblue;
     box-shadow: 4px 4px 3px;
 }
 .card-body {
@@ -32,8 +33,4 @@
 }
 .btn {
     margin: 2px;
-}
-
-.description {
-    padding: 15px;
 }
