auth login works

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -12,6 +12,7 @@
     <main>
         <div>
             <h2>Register</h2>
+            <h3><%= msg %></h3>
             <form action="/register" method="POST">
                 <div class="form-group">
                     <div class="input-group mb-2 border">
