--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -38,8 +38,16 @@
             <li class="nav-item">
                 <a class="nav-link txt-sl" href="/login">Login</a>
             </li>
+            <% const showRegister = true %>
+            <% if (showRegister) { %>
             <li class="nav-item">
                 <a class="nav-link txt-sl" href="/register">Register</a>
+            </li>
+            <% } %>
+            <li class="nav-item">
+                <form action="/logout?_method=DELETE" method="POST" class="nav-link txt-sl">
+                    <button type="submit">Logout</button> 
+                </form>
             </li>
         </ul>
     </div>
