--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,16 +12,9 @@
     <main>
         <div>
             <h2>Login</h2>
+            <h3><%= msg %></h3>
             <form action="/login" method="POST">
                 <div class="form-group">
-                    <div class="input-group mb-2 border">
-                        <label class="sr-only" for="name">Name</label>
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">Name</div>
-                        </div>
-                        <input type="text" class="form-control" name="name" id="name">
-                        <br>
-                    </div>
                     <div class="input-group mb-2 border">
                         <label class="sr-only" for="email">Email</label>
                         <div class="input-group-prepend">
@@ -45,7 +38,6 @@
             <div class="card dashcard border" style="width: 18rem;">
                 <div class="card-body">
                     <h3 class="card-title">Use below info for Testing</h3>
-                    <p>Name: testing</p>
                     <p>Email: testing@now.com</p>
                     <p>Password: 1234</p>
                 </div>
