--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,10 +20,10 @@
                     <p>Average Margin: <%= type.avgMargin %></p>
                     <div class="card-body btn-group dash-btn-grp " role="group" aria-label="Basic example">
                         <a href="/<%= type.name %>">
-                            <button type="button" class="btn btn-secondary gray-bg" style="border-radius: 3px 0 0 3px;">Details</button>
+                            <button type="button" class="btn btn-secondary" style="border-radius: 3px 0 0 3px;">Details</button>
                         </a>
                         <a href="/<%= type.name %>/new">
-                            <button type="button" class="btn btn-secondary gray-bg" style="border-radius: 0 3px 3px 0;">Add new</button>
+                            <button type="button" class="btn btn-secondary" style="border-radius: 0 3px 3px 0;">Add new</button>
                         </a>
                     </div>
                 </div>
