--- a/views/show.ejs
+++ b/views/show.ejs
@@ -39,7 +39,7 @@
             </div>
             <div ><img src="<%= Product.photo %> " class="show-photo border"></div>
             <% if (Product.description) { %>
-                <div class="description border"><%= Product.description %></div>
+                <div class="description card border"><%= Product.description %></div>
             <% } %>
         </section>
     </main>
