--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,7 @@ main {
     justify-content: center;
     width: 80vw;
     height: 100%;
+    margin-bottom: 50px;
 }
 
 
@@ -112,6 +113,14 @@ form {
     display: flex;
     justify-content: center;
 }
+.form-head {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    position: relative;
+}
 .form-group {
     width: 60vw;
     display: block;
@@ -124,18 +133,29 @@ form {
 .input-group {
     margin: 15px 0;;
 }
-
 .form-group label {
     color: whitesmoke;
 }
-
 #maker {
     height: 38px;
-    margin: 15px 0;
 }
-
 .submit {
     float: right;
+}
+.new-maker {
+    position: absolute;
+    right: 0;
+    top: 5px;
+}
+.maker-drop {
+    background-color: rgb(106, 115, 123);
+    height: fit-content;
+    width: fit-content;
+    padding: 0 0 0 5px;
+    margin-top: 20px;
+}
+.new-title {
+    padding: 5px 10px 5px 10px;
 }
 
 /* footer */
