--- a/public/css/main.css
+++ b/public/css/main.css
@@ -125,11 +125,18 @@ form {
 .form-group {
     width: 60vw;
     display: block;
-    justify-content: center;
-    
+    justify-content: center;  
 }
 .form-control {
     width: 100%;
+}
+.form-line {
+    display: flex;
+    margin-top: 20px;
+    background-color: rgb(106, 115, 123);
+}
+.form-label {
+    padding: 4px 5px 0 6px;
 }
 .input-group {
     margin: 15px 0;;
@@ -217,4 +224,7 @@ footer {
 .btn-right {
     border-radius: 0 4px 4px 0;
     margin-right: 3px;
+}
+.tm-20 {
+    margin-top: 20px;
 }
