--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -41,7 +41,7 @@
             <% } %>
             <li class="nav-item">
                 <form action="/logout?_method=DELETE" method="POST" class="nav-link txt-sl">
-                    <button type="submit">Logout</button> 
+                    <button class="border" type="submit">Logout</button> 
                 </form>
             </li>
         </ul>
